--- a/addons/gestao_tesouraria/views/ordem_pagamento.xml
+++ b/addons/gestao_tesouraria/views/ordem_pagamento.xml
@@ -204,7 +204,7 @@
 
 
         <menuitem name=" Ordem de Pagamento " id="menu_ordpagamento_m" parent="gestao_tesouraria.menu_1"
-                  action="ordpagamento_act_window"/>
+                  action="ordpagamento_act_window" sequence="4"/>
 
         <record id="det_form" model="ir.ui.view">
             <field name="name">Detalhes Documento</field>
